# RCI_mobile_navigation_tr

./: README.md
tr_common2/: package.xml
tr_description/: CMakeLists.txt  package.xml
tr_description/log/: latest_list
tr_description/urdf/: amr_body.urdf.xacro  amr_gazebo.urdf.xacro
tr_driver/: package.xml
tr_driver_msgs/: package.xml
tr_real/launch/: bringup_real.launch.py  tr_navigation2.launch.py
tr_sim/: package.xml
tr_sim/configs/: amr_controller.yaml
tr_sim/launch/: simulation.launch.py
tr_sim/log/: latest_list
